Closed Bug 302545 Opened 21 years ago Closed 21 years ago

crash w/ --enable-timeline [@ DocumentViewerImpl::LoadComplete]

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: assertion, crash)

Crash Data

Attachments

(1 obsolete file)

i think this is like bug 298022. i build w/ MOZ_TIMELINE nsIURI *uri = mDocument->GetDocumentURI(); $!this->mDocument.mRawPtr 0x00000000 class nsIDocument * gklayout!nsCOMPtr<nsIURI>::get(void)+0xa (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\dbg-i686-pc-cygwin\dist\include\xpcom\nscomptr.h @ 831] gklayout!nsCOMPtr<nsIURI>::operator nsDerivedSafe<nsIURI> *(void)+0xf (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\dbg-i686-pc-cygwin\dist\include\xpcom\nscomptr.h @ 844] gklayout!nsIDocument::GetDocumentURI(void)+0x12 (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\dbg-i686-pc-cygwin\dist\include\content\nsidocument.h @ 148] gklayout!DocumentViewerImpl::LoadComplete(unsigned int aStatus = 0)+0x182 (FPO: [Non-Fpo]) (CONV: stdcall) [r:\mozilla\layout\base\nsdocumentviewer.cpp @ 1014] docshell!nsDocShell::EndPageLoad(class nsIWebProgress * aProgress = 0x040aefb4, class nsIChannel * aChannel = 0x03fcc208, unsigned int aStatus = 0)+0x98 (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\docshell\base\nsdocshell.cpp @ 4650] docshell!nsWebShell::EndPageLoad(class nsIWebProgress * aProgress = 0x040aefb4, class nsIChannel * channel = 0x03fcc208, unsigned int aStatus = 0)+0x11d (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\docshell\base\nswebshell.cpp @ 665] docshell!nsDocShell::OnStateChange(class nsIWebProgress * aProgress = 0x040aefb4, class nsIRequest * aRequest = 0x03fcc208, unsigned int aStateFlags = 0x20010, unsigned int aStatus = 0)+0x3bc (FPO: [Non-Fpo]) (CONV: stdcall) [r:\mozilla\docshell\base\nsdocshell.cpp @ 4576] docshell!nsDocLoader::FireOnStateChange(class nsIWebProgress * aProgress = 0x040aefb4, class nsIRequest * aRequest = 0x03fcc208, int aStateFlags = 131088, unsigned int aStatus = 0)+0x1be (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\uriloader\base\nsdocloader.cpp @ 1211] docshell!nsDocLoader::doStopDocumentLoad(class nsIRequest * request = 0x03fcc208, unsigned int aStatus = 0)+0x81 (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\uriloader\base\nsdocloader.cpp @ 844] docshell!nsDocLoader::DocLoaderIsEmpty(void)+0x10a (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\uriloader\base\nsdocloader.cpp @ 741] docshell!nsDocLoader::OnStopRequest(class nsIRequest * aRequest = 0x040688f0, class nsISupports * aCtxt = 0x00000000, unsigned int aStatus = 0)+0x3a6 (FPO: [Non-Fpo]) (CONV: stdcall) [r:\mozilla\uriloader\base\nsdocloader.cpp @ 665] necko!nsLoadGroup::RemoveRequest(class nsIRequest * request = 0x040688f0, class nsISupports * ctxt = 0x00000000, unsigned int aStatus = 0)+0x22f (FPO: [Non-Fpo]) (CONV: stdcall) [r:\mozilla\netwerk\base\src\nsloadgroup.cpp @ 732] gklayout!PresShell::RemoveDummyLayoutRequest(void)+0x96 (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\layout\base\nspresshell.cpp @ 7095] gklayout!DummyLayoutRequestEvent::HandleEvent(void)+0x36 (FPO: [Non-Fpo]) (CONV: thiscall) [r:\mozilla\layout\base\nspresshell.cpp @ 6995] gklayout!HandleDummyLayoutRequestPLEvent(struct PLEvent * aEvent = 0x03f7f1a0)+0x12 (FPO: [Non-Fpo]) (CONV: cdecl) [r:\mozilla\layout\base\nspresshell.cpp @ 7004] xpcom_core!PL_HandleEvent(struct PLEvent * self = 0x03f7f1a0)+0x3d (FPO: [Non-Fpo]) (CONV: cdecl) [r:\mozilla\xpcom\threads\plevent.c @ 685] xpcom_core!PL_ProcessPendingEvents(struct PLEventQueue * self = 0x00aed168)+0xc7 (FPO: [Non-Fpo]) (CONV: cdecl) [r:\mozilla\xpcom\threads\plevent.c @ 620] xpcom_core!_md_TimerProc(struct HWND__ * hwnd = 0x000e06be, unsigned int uMsg = 0x113, unsigned int idEvent = 0, unsigned long dwTime = 0x29b402a7)+0x5d (FPO: [Non-Fpo]) (CONV: stdcall) [r:\mozilla\xpcom\threads\plevent.c @ 1010] WARNING: Stack unwind information not available. Following frames may be wrong. USER32!GetDC+0x6d USER32!IsChild+0x149 USER32!IsChild+0x83 USER32!DispatchMessageA+0xf winEmbed!AppCallbacks::RunEventLoop(int * aRunCondition = 0x0012feec)+0x8b (FPO: [Non-Fpo]) (CONV: cdecl) [r:\mozilla\embedding\tests\winembed\winembed.cpp @ 1198] winEmbed!main(int argc = 1, char ** argv = 0x003d8720)+0x186 (FPO: [Non-Fpo]) (CONV: cdecl) [r:\mozilla\embedding\tests\winembed\winembed.cpp @ 188] winEmbed!mainCRTStartup(void)+0x12c (FPO: [Non-Fpo]) (CONV: cdecl) [f:\vs70builds\3077\vc\crtbld\crt\src\crtexe.c @ 398] kernel32!RegisterWaitForInputIdle+0x49
###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../dist/include/xpcom\nsCOMPtr.h, line 849
Status: NEW → ASSIGNED
Keywords: assertion
Attached patch handle null document (obsolete) — Splinter Review
Attachment #190877 - Flags: superreview?(bzbarsky)
Attachment #190877 - Flags: review?(bzbarsky)
Why is the document null at all here?
Attachment #190877 - Flags: superreview?(bzbarsky)
Attachment #190877 - Flags: superreview+
Attachment #190877 - Flags: review?(bzbarsky)
Attachment #190877 - Flags: review+
Attachment #190877 - Flags: approval1.8b4?
Attachment #190877 - Flags: approval1.8b4? → approval1.8b4+
Comment on attachment 190877 [details] [diff] [review] handle null document mozilla/layout/base/nsDocumentViewer.cpp 1.440
Attachment #190877 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Crash Signature: [@ DocumentViewerImpl::LoadComplete]
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: