Bug 302545 crash w/ --enable-timeline [@ DocumentViewerImpl::LoadComplete] r=bz sr=bz a=asa